# rottendouban

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  serve.py  说明.txt
.github/workflows/: crawl-deploy.yml  publish-package.yml
crawler/: __init__.py  config.py  database.py  douban.py  downloader.py  main.py  movie_list.py  rotten_tomatoes.py  site_generator.py  tmdb_api.py
crawler/data/: douban_cache.json
scripts/: check_cache.py  check_db.py  update_site.py  verify_site.py
site/: index.html  manifest.json
site/css/: style.css
site/data/: movies.json
site/js/: app.js
